add babel config for antdmobile

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,6 @@
     }
   </script>
   <script src="https://static.boohee.cn/js/lodash.js/4.17.4/lodash.min.js"></script>
-  <script src="https://static.boohee.cn/js/echarts/4.1.0/echarts.min.js"></script>
+  <!--<script src="https://static.boohee.cn/js/echarts/4.1.0/echarts.min.js"></script>-->
 </body>
 </html>
