--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	</script>
 	<title>GouDanxi的小破站</title>
   <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_892764_kydysmamufq.css">
 </head>
 <body>
 	<div id="app"></div>
