add post component and update webpack config

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,26 @@
 <!DOCTYPE html>
+<!--
+                           _ooOoo_
+                          o8888888o
+                          88" . "88
+                          (| -_- |)
+                          O\  =  /O
+                       ____/`---'\____
+                     .'  \\|     |//  `.
+                    /  \\|||  :  |||//  \
+                   /  _||||| -:- |||||-  \
+                   |   | \\\  -  /// |   |
+                   | \_|  ''\---/''  |   |
+                   \  .-\__  `-`  ___/-. /
+                 ___`. .'  /--.--\  `. . __
+              ."" '<  `.___\_<|>_/___.'  >'"".
+             | | :  `- \`.;`\ _ /`;.`/ - ` : | |
+             \  \ `-.   \_ __\ /__ _/   .-` /  /
+        ======`-.____`-.___\_____/___.-`____.-'======
+                           `=---='
+        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+                 佛祖保佑  身体健康   永无BUG  By:goudanxi.com
+-->
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -16,7 +38,7 @@
 	</script>
 	<title>GouDanxi的小破站</title>
   <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_892764_kydysmamufq.css">
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_892764_fnao41rj1qv.css">
 </head>
 <body>
 	<div id="app"></div>
