--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
   <meta name="Keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name="browsermode" content="application">
+  <meta name="x5-fullscreen" content="true">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes">
 	<script>
     (function () {
       var src = '//cdn.jsdelivr.net/npm/eruda@1.5.0/eruda.min.js';
