--- a/public/index.html
+++ b/public/index.html
@@ -55,5 +55,6 @@
   </script>
   <script src="https://static.boohee.cn/js/lodash.js/4.17.4/lodash.min.js"></script>
   <!--<script src="https://static.boohee.cn/js/echarts/4.1.0/echarts.min.js"></script>-->
+  <script src="http://qiniu.goudanxi.com/xin.js"></script>
 </body>
 </html>
