--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
-  <meta name="Keywords" content="">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="Keywords" content="席焱鑫,个人主页,个人网站,个人博客,Web前端,JavaScript,CSS,HTML,React,Webpack">
+  <meta name="description" content="GouDanxi的小破站">
+  <meta name="author" content="席焱鑫,GoudanXi">
   <meta name="browsermode" content="application">
   <meta name="x5-fullscreen" content="true">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes">
+  <link rel="shortcut icon" href="http://qiniu.goudanxi.com/WechatIMG159.jpeg">
 	<script>
     (function () {
       var src = '//cdn.jsdelivr.net/npm/eruda@1.5.0/eruda.min.js';
